[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.33.3"
egui_plot = "0.34.0"
rfd = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
